# CORA-IFAM

./: CMakeLists.txt  CORA.c  CORA.cpp  Carlos  Carlos_  Carlos_Alexandre  README.md  SENHA  termo_compromisso.txt  trabalho da lista de fruta
T3-pilhas_e_filas/: Carlos_alexandre.cpp  Fila_CarlosAlexandre.cpp  Pilha_Carlos_alexandre.cpp  pilha.cpp  se punheta afinasse pau, o meu tava no the voice  simulação de pacotes enviados
frutas/: Araújo  Carlos_alexandre  dicionario.txt
include/: armario.h  database.h  interface.h  menu.h  usuario.h
include/ui/: MainMenu.hpp  Window.hpp
src/: armario.cpp  database.cpp  interface.cpp  main.cpp  usuario.cpp
src/ui/: MainMenu.cpp
